--- a/public_html/style.extend.css
+++ b/public_html/style.extend.css
@@ -528,7 +528,7 @@ footer h2{
 }
 .newsletter-box .form-control:-ms-input-placeholder { /* IE 10+ */
     color: #fff;
-}
+}a
 .newsletter-box .form-control:-moz-placeholder { /* Firefox 18- */
     color: #fff;
 }
@@ -617,6 +617,14 @@ li.nav-button div {
         bottom: -50px;
     }
 }
+@media (min-width: 992px) and (max-width: 1100px){
+    #logo {
+        width: 150px;
+    }
+    #header, #header-wrap, #logo img {
+        height: 60px;
+    }
+}
 @media (min-width: 992px) and (max-width: 1280px){
     #primary-menu ul li > a{
         font-size: 10px;
@@ -624,8 +632,27 @@ li.nav-button div {
         padding-right: 4px;
     }
 }
-@media (min-width: 1200px) and (max-width: 1280px){
+@media (min-width: 1280px) {
     #primary-menu ul li > a{
         font-size: 12px;
+        padding-left: 4px;
+        padding-right: 4px;
     }
+}
+@media (min-width: 1400px) {
+    #primary-menu ul li > a{
+        font-size: 14px;
+    }
+}
+#one-page-menu {
+    padding-right: 0px;
+    margin-right: 0px;
+}
+#header.transparent-header.full-header #primary-menu > ul {
+    padding-right: 0px;
+    margin-right: 0px;
+}
+#header.full-header #logo {
+    padding-right: 4px;
+    margin-right: 4px;
 }
